projeto 001: commit final

--- a/proj001/index.html
+++ b/proj001/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <title>Document</title>
-  <link rel="stylesheet" href="estilo.css">
+    <meta charset="UTF-8">
+    <title>Primeiro Passo</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <h1>Oscar 2017</h1>
-  <h2>Indicados Melhor Filme</h2>
-
-  <ul>
-    <li>La la Land</li>
-    <li>A Chegada</li>
-    <li>Lion</li>
-    <li>Hell or High Water</li>
-    <li>Estrelas Além do Tempo</li>
-    <li>Moonlight: Som a Luz do Luar</li>
-    <li>Hacksaw Ridge</li>
-    <li>Mancherster à Beira Mar</li>
-    <li>Um limite entre Nós</li>
-  </ul>
-  
+    <h1>Oscar 2017</h1>
+    <h2>Indicadores Melhor Filme</h2>
+    <ul>
+        <li>Homem de Ferro</li>
+        <li>Os Vingadores</li>
+        <li>Homem Aranha3</li>
+        <li>Os Incriveis</li>
+        <li>Furia Sobre Rodas</li>
+        <li>Crepusculo</li>
+        <li>Tartaruga Ninja</li>
+        <li>Atirador 3</li>
+        <li>Salt</li>
+    </ul>
 </body>
 </html>
