projeto 002: ajuste atributo alt

--- a/proj002/index.html
+++ b/proj002/index.html
@@ -31,7 +31,7 @@
     
     <div class="noticia">
         <a href="http://twixar.me/s10K">
-          <img src="brasilia.png" alt="Foto da Cratera">
+          <img src="brasilia.png" alt="Foto do Congresso Nacional">
         </a>
         
         <div class="texto">
